# WavFlow-Dev

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.txt  README.md  TRAINING.md  pyproject.toml  requirements.txt
feature_extract/: extract_t2a_pth.py  extract_vt2a_pth.py
feature_extract/configs/: extract_t2a.yaml  extract_vt2a.yaml
feature_extract/dataset/: local_audio_text_dataset.py  local_video_text_dataset.py
feature_extract/ext/: features_utils.py
feature_extract/ext/synchformer/: __init__.py  divided_224_16x4.yaml  motionformer.py  synchformer.py  utils.py  video_model_builder.py  vit_helper.py
scripts/: setup.sh
scripts/launch/: _run.sh  extract_t2a.sh  extract_vt2a.sh  predict.sh  train_multi_node.sh  train_single_node.sh
training_samples/: infer_example.csv  train_t2a.csv  train_vt2a.csv
training_samples/features/: t2a_feature.csv  vt2a_feature.csv
wavflow/: infer.py  train.py  trainer.py  trainer_utils.py
wavflow/configs/: base.yaml  infer.yaml  train.yaml
wavflow/dataset/: multiaudio_dataset.py
wavflow/model/: embeddings.py  flow_matching.py  low_level.py  networks.py  rotary_embeddings.py  transformer_layers.py
wavflow/utils/: auto_download.py
